--- a/react-app/src/components/Watchlist/Watchlist.css
+++ b/react-app/src/components/Watchlist/Watchlist.css
@@ -227,7 +227,6 @@
   flex-direction: column;
   justify-content: center;
   gap: 20px;
-  z-index: 100;
 }
 
 .watchlist-cryptos {
